--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,58 @@ footer {
     top: 10px; /* Отступ сверху */
     left: 10px; /* Отступ слева */
 }
+
+#scrollTop {
+    display: none; /* По умолчанию скрыта */
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    font-size: 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#scrollTop:hover {
+    background-color: #388E3C;
+}
+
+.modal {
+    display: none; /* Скрыто по умолчанию */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal img {
+    max-width: 90%;
+    max-height: 90%;
+    border: 5px solid white;
+    border-radius: 10px;
+}
+
+.modal .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+/* Стили для пиктограммы лупы */
+.zoom-icon {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+}
