--- a/css/add_product.css
+++ b/css/add_product.css
@@ -97,21 +97,23 @@ nav ul li a {
     background-color: #45a049;
 }
 
-/* button#backButton {
-    margin-top: 15px;
-    background-color: #007BFF;
+#scrollTop {
+    display: none; /* По умолчанию скрыта */
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    font-size: 20px;
+    background-color: #232423;
     color: white;
     border: none;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
+    border-radius: 50%;
     cursor: pointer;
-    width: 100%;
 }
 
-button#backButton:hover {
-    background-color: #0056b3;
-} */
+#scrollTop:hover {
+    background-color: #1b1b1b;
+}
 
 /* Футер */
 footer {
