--- a/products/product2.css
+++ b/products/product2.css
@@ -146,7 +146,7 @@ body {
     right: 20px;
     padding: 10px 15px;
     font-size: 20px;
-    background-color: black;
+    background-color: #232423;
     color: white;
     border: none;
     border-radius: 50%;
@@ -154,7 +154,7 @@ body {
 }
 
 #scrollTop:hover {
-    background-color: #388E3C;
+    background-color: #1b1b1b;
 }
 
 .modal {
