--- a/css/cart.css
+++ b/css/cart.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column; /* Устанавливаем вертикальное направление */
+    min-height: 100vh; /* Минимальная высота body - 100% от высоты экрана */
 }
 
 header {
