--- a/css/faq.css
+++ b/css/faq.css
@@ -1,3 +1,60 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column; /* Устанавливаем вертикальное направление */
+    min-height: 100vh; /* Минимальная высота body - 100% от высоты экрана */
+}
+
+header {
+    background: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.logo {
+    width: 100px;
+    height: 100px; 
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+}
+
+#H2 {
+    margin-left: 20px;
+}
+
+section {
+    padding: 0; 
+    margin: 20px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    height: 100%; 
+    min-height: 65vh; /* Минимальная высота body - 100% от высоты экрана */
+    
+}
+
 #scrollTop {
     display: none; /* По умолчанию скрыта */
     position: fixed;
@@ -15,3 +72,28 @@
 #scrollTop:hover {
     background-color: #1b1b1b;
 }
+
+.faq-item h3 {
+    margin: 10px;
+    font-size: 1.2rem;
+}
+
+.faq-item p {
+    white-space: pre-line;
+    margin: 10px;
+}
+
+main {
+    flex: 1; /* Занимает все доступное пространство */
+}
+
+/* Футер */
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: auto; 
+    /* width: 100%; */
+  }
