--- a/css/cart.css
+++ b/css/cart.css
@@ -115,11 +115,11 @@ footer {
 }
 
 .logo {
-    width: 100px; /* Устанавливаем ширину логотипа */
-    height: 100px; /* Автоматическая высота для сохранения пропорций */
+    width: 100px; 
+    height: 100px; 
     position: absolute; /* Позиционирование для размещения в углу */
-    top: 10px; /* Отступ сверху */
-    left: 10px; /* Отступ слева */
+    top: 10px; 
+    left: 10px; 
 }
 
 #scrollTop {
