--- a/css/catalog.css
+++ b/css/catalog.css
@@ -98,6 +98,19 @@ section {
   color: #007BFF;
 }
 
+
+/* Стиль для активной категории */
+.categories-menu ul li a.active {
+  background-color: #007BFF;
+  color: white;
+  font-weight: bold;
+}
+
+/* Эффект при наведении на категорию */
+.categories-menu ul li a:hover {
+  background-color: #e1e1e1;
+}
+
 .product-list {
   flex-grow: 1;
   padding: 20px;
@@ -179,4 +192,47 @@ footer {
   text-align: center;
   padding: 20px 0;
   margin-top: auto; 
+}
+
+#catalog-description {
+  padding: 20px;
+  margin: 20px 0;
+  background-color: #fafafa;
+  border-radius: 8px;
+  text-align: center;
+}
+
+#catalog-description p {
+  font-size: 1.1rem;
+  color: #333;
+  line-height: 1.6;
+}
+
+/* Стиль для ползунка */
+#price-range {
+  width: 100%;
+  margin: 10px 0;
+}
+
+/* Стиль для текста отображения цены */
+#price-display {
+  font-size: 16px;
+  color: #333;
+}
+
+/* Стиль для кнопки сброса */
+.reset-button {
+  background-color: #59d1e0; /* Красный цвет */
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.reset-button:hover {
+  background-color: #3926e0; /* Темнее красный при наведении */
 }
