--- a/css/add_product.css
+++ b/css/add_product.css
@@ -11,6 +11,13 @@ header {
     padding: 10px 0;
     text-align: center;
 }
+
+header p {
+    font-size: 2em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
+}
   
 nav ul {
     list-style: none;
