--- a/css/faq.css
+++ b/css/faq.css
@@ -15,6 +15,13 @@ header {
     text-align: center;
 }
 
+header p {
+    font-size: 2em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
+}
+
 nav ul {
     list-style: none;
     padding: 0;
