--- a/css/about.css
+++ b/css/about.css
@@ -37,53 +37,47 @@ nav ul li a {
 
 .about-container {
     max-width: 1200px;
-    margin: 40px auto;
+    margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.header {
+.about-header {
     text-align: center;
 }
 
-.header img {
-    width: 150px;
-    height: 150px;
+.about-header img {
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
+    margin-bottom: 15px;
 }
 
 .about-content {
     margin-top: 20px;
-    text-align: center;
-}
-
-.about-content h1 {
-    font-size: 2.5rem;
-    color: #0056b3;
 }
 
 .about-content h2 {
-    font-size: 1.5rem;
-    color: #555;
+    color:rgb(1, 10, 5);
+    margin-bottom: 10px;
 }
 
-.about-content p {
-    font-size: 1rem;
-    line-height: 1.6;
-    margin: 20px 0;
-    color: #555;
+.about-section,
+.partners-section {
+    margin-top: 30px;
 }
 
-.about-content a {
-    color: #0056b3;
-    text-decoration: none;
+.partners-section ul {
+    padding: 0;
+    list-style: none;
 }
 
-.about-content a:hover {
-    text-decoration: underline;
+.partners-section ul li {
+    margin-bottom: 10px;
 }
+
 
 footer {
     background-color: #333;
@@ -99,4 +93,11 @@ footer {
     position: absolute; 
     top: 10px; 
     left: 10px; 
+}
+
+#contact {
+    font-size: 1.5em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
 }
