--- a/css/add_product.css
+++ b/css/add_product.css
@@ -138,3 +138,10 @@ footer {
     padding: 20px 0;
     margin-top: auto; 
   }
+
+#contact {
+    font-size: 1.5em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
+}
