--- a/css/faq.css
+++ b/css/faq.css
@@ -104,3 +104,10 @@ footer {
     margin-top: auto; 
     /* width: 100%; */
   }
+
+#contact {
+    font-size: 1.5em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
+}
