--- a/products/product2.css
+++ b/products/product2.css
@@ -5,6 +5,52 @@ body {
     background-color: #f9f9f9;
     color: #333;
 }
+
+header {
+    background: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+header p {
+    font-size: 2em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.logo {
+    width: 100px;
+    height: 100px; 
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: auto; 
+}
+
 .container {
     width: 90%;
     max-width: 1080px;
@@ -212,4 +258,11 @@ body {
     border-radius: 50%; 
     padding: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); 
+}
+
+#contact {
+    font-size: 1.5em; 
+    font-weight: bold; 
+    margin: 0.67em 0; 
+    line-height: 1.2; 
 }
