--- a/products/product2.css
+++ b/products/product2.css
@@ -266,3 +266,10 @@ footer {
     margin: 0.67em 0; 
     line-height: 1.2; 
 }
+
+.genres p {
+    display: inline-block;
+    margin: 0 5px; 
+    font-size: inherit; 
+    color: inherit; 
+}
